# createdifyagents

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  banking_jira_stories_small.csv  dify-sse-complete-architecture.md  pyproject.toml  reacreate.md  recreate_all.md  requirements.txt  run.py
dsl/: graph_http.yml  graph_slim.yml
editor/: index.html  package-lock.json  package.json  vite.config.js
editor/src/: App.jsx  Canvas.jsx  CanvasNode.jsx  Inspector.jsx  Palette.jsx  Toolbar.jsx  api.js  dslSerializer.js  editorModel.test.js  nodeTypes.js  store.js  styles.css
static/: index.html
story_pointer/: __init__.py  anchors.py  api.py  config.py  dsl_api.py  engine.py  exports.py  llm.py  schema.py  telemetry.py
story_pointer/sources/: __init__.py  jira.py  manual.py  spreadsheet.py
tests/: conftest.py  test_api_sse.py  test_engine.py  test_exports.py  test_invariant.py  test_production_safety.py  test_schema.py  test_sources.py  test_telemetry.py
