[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "story-pointer"
version = "0.1.0"
description = "Evidence-led story-point estimator for React/Spring delivery teams in regulated (banking) environments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Story Pointer" }]
keywords = ["story-points", "agile", "estimation", "langgraph", "graphon", "dify", "dify-dsl"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "arize-phoenix>=18.0.0",
    "arize-phoenix-otel>=0.16.1",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-instrumentation-httpx>=0.64b0",
    "graphon>=0.1.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "PyYAML>=6.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/langgenius/graphon"

[tool.setuptools.packages.find]
where = ["."]
include = ["story_pointer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
